Fix alignment issues in set password alert in recoveryseed setting,button issues in choose daemon wallet,default window width changed

--- a/stylesheets/_bchat.scss
+++ b/stylesheets/_bchat.scss
@@ -1400,9 +1400,10 @@ label {
     background-color: #0000001f;
     &-contentbox {
       text-align: center;
-      width: 48%;
+      // width: 48%;
+      width: 60%;
       background-color: var(--color-WalcontentBg);
-      padding: 21px 74px;
+      padding: 21px 30px;
       border-radius: 10px;
     }
     .fontSemiBold {
@@ -1410,8 +1411,14 @@ label {
       font-size: 14px;
     }
     .bchat-button.brand.green {
+    width: 168px;
       height: 40px;
       border-radius: 5px;
+    }
+    .flexCenter
+    {
+      display: flex;
+    justify-content: center;
     }
   }
 
